# MiCA

./: LICENSE  README.md  pyproject.toml  setup.py
examples/: example_ko_data_v2.csv  example_sc_data_v2.csv
mica/: __init__.py  plotting.py  projector.py  utils.py
