[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mica"
version = "0.1.0"
description = "Project CRISPR perturbations onto cell state transition networks"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Ken Xie"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "numpy>=1.20",
    "pandas>=1.3",
    "scipy>=1.7",
    "matplotlib>=3.4",
    "adjustText>=0.7",
    "igraph>=0.11.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black",
    "flake8",
]

[project.urls]
Homepage = "https://github.com/kenxie7/MiCA"
Documentation = "https://github.com/kenxie7/MiCA#readme"
Repository = "https://github.com/kenxie7/MiCA"

[tool.setuptools.packages.find]
where = ["."]
